add login/signupt/home ui, implement login

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Exercise/Jan_20/restful-java/target/
 /Exercise/Feb_22/restful-java/target/
+/Exercise/Ass1_March/restful-client/nbproject/private/
