--- a/Exercise/MAD_ASS2/app/build.gradle
+++ b/Exercise/MAD_ASS2/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.restful_client_android"
+        applicationId "com.hieunguyen.mad_ass2"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -20,11 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile files('libs/android-support-v4.jar')
-    compile files('libs/GoogleAdMobAdsSdk-6.4.1.jar')
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile files('libs/gson-2.6.2.jar')
-    compile 'com.android.support:design:23.0.0'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+//    compile 'com.android.support:appcompat-v7:24.0.0-alpha2'
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:design:22.2.0'
     compile 'com.jakewharton:butterknife:7.0.1'
 }
