--- a/Exercise/Ass2_April/Restful_Client_Android/app/build.gradle
+++ b/Exercise/Ass2_April/Restful_Client_Android/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile files('libs/GoogleAdMobAdsSdk-6.4.1.jar')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile files('libs/gson-2.6.2.jar')
+    compile 'com.android.support:design:23.0.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
