--- a/Exercise/Ass2_April/Restful_Client_Android/app/src/main/AndroidManifest.xml
+++ b/Exercise/Ass2_April/Restful_Client_Android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:theme="@style/AppTheme.Dark"
             android:name=".LogInActivity"
             android:label="@string/app_name" >
             <intent-filter>
