recents activity in profil, delete / edit post

--- a/Exercise/Ass2_April/Restful_Client_Android/settings.gradle
+++ b/Exercise/Ass2_April/Restful_Client_Android/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':library', ':showcase', ':blur-behind', ':circlesimageview', ':dialogcore', ':dialogcommons', ':pullToRefresh'
+include ':app', ':library', ':showcase', ':blur-behind', ':circlesimageview', ':dialogcore', ':dialogcommons', ':pullToRefresh', ':swipemenu'
