--- a/Exercise/Ass2_April/Restful_Client_Android/app/build.gradle
+++ b/Exercise/Ass2_April/Restful_Client_Android/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile 'com.android.support:gridlayout-v7:23.1.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
+    compile project(path: ':swipemenu')
 }
