--- a/Exercise/Ass2_April/Restful_Client_Android/app/src/main/AndroidManifest.xml
+++ b/Exercise/Ass2_April/Restful_Client_Android/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/moments"
+        android:label="Moments"
         android:theme="@style/AppTheme">
         <activity
             android:name=".LogInActivity"
